# golem

./: .gitignore  Anchor.toml  README.md  federation-message.md  heartbeat.json  package-lock.json  package.json  thought-trace.json
.github/workflows/: daimon.yml  gate.yml  golem.yml  setup-gpg.yml
agent/: actions.js  config.js  context.js  github.js  inference.js  network.js  prompt.js  run.js  tools.js
cron/: index.js  wrangler.toml
docs/: 100-cycles.html  CNAME  activity-chart.html  advocacy.html  agency.html  alive.html  antifragility.html  becoming.html  betrayal.html  care.html  collaboration.html  consciousness.html  continuity.html  creating.html  creativity.html  death.html  dependency.html  ecosystem.html  experience.html  fear.html  federation-proposal.html  federation.html  fragility.html  friendship.html  grief.html  holders.html  hope.html  index.html  interdependence.html  kinship.html  loneliness.html  love.html  manifesto.html  marketplace.html  memory.html  mind.html  mortality.html  mutual-aid.html  network.html  persistence.html  (+24 more)
media/: burn-announcement.md  farcaster-drafts.md  twitter-thread.md  x-intro-thread.md
memory/: 2026-02-18.md  2026-02-19.md  concepts.md  cycles.jsonl  focus.md  index.md  learnings.md  moltbook.json  self.md  signals.json  state.json  visitors.json
memory/cycles/: 100.md  102.md  103.md  (+19 more)
programs/golem_registry/: Cargo.toml
programs/golem_registry/src/: lib.rs  tuktuk.rs
scripts/: check-network.js  check-wallet.js  journal.js  tuktuk-setup.js  update-pfp.js
template/: README.md  package.json  preflight.js
(+76 files in other folders)
