[package]
name = "golem-registry"
version = "0.1.0"
description = "Golem network agent registry on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "golem_registry"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
